# ctc

./: CHANGELOG.md  README.md  ctc_bases.py  pyproject.toml
ctc/: __init__.py  abstract_cycle_time.py  ctdata.py  cycle_time_calc.py  cycle_time_data_build.py  cycle_time_data_clean.py  cycle_time_train.py  iter_async.py
test/: test_cycle_time_calc.py  test_data_clean.py  test_predict.py  test_train.py
