[tool.poetry]
name = "ctc"
version = "1.0.1"
description = "Telescope Cycle Time Calculator"
authors = ["MMiirrkk <cot@wp.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.9,<4.0"
numpy = ">=1.22,<2"
scikit-learn = "^1.5.2"
pyaraucaria = {git = "https://github.com/araucaria-project/pyaraucaria.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
