[tool.poetry]
name = "ctc"
version = "1.2.8" # Change also in ctc_bases.py
description = "Telescope Cycle Time Calculator"
authors = ["MMiirrkk <cot@wp.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.10,<4.0"
numpy = ">=1.22"
scikit-learn = "^1.5.2"
pyaraucaria = {git = "https://github.com/araucaria-project/pyaraucaria.git"}
aiofile = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
